--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "grade-tracker",
+  "name": "frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -14,11 +14,7 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@types/node": "18.7.16",
-    "@types/react": "18.0.18",
-    "@types/react-dom": "18.0.6",
     "eslint": "8.23.0",
-    "eslint-config-next": "12.2.5",
-    "typescript": "4.8.2"
+    "eslint-config-next": "12.2.5"
   }
 }
